--- a/StatisticsWithPython_CourseraCourse.ipynb
+++ b/StatisticsWithPython_CourseraCourse.ipynb
@@ -100,42 +100,6 @@
     },
     {
       "metadata": {
-        "id": "k3XYJdLoERvv",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        ""
-      ]
-    },
-    {
-      "metadata": {
-        "id": "XswbRwXLESYm",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "ioT1bBd4FeRs",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        "\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
         "id": "6sfLwiaC4h3b",
         "colab_type": "text"
       },
@@ -1081,6 +1045,46 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "PDNqK13pyIBH",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "### Modern ways to visulize data\n",
+        "\n",
+        "While viewing them, think through:\n",
+        "\n",
+        "What about this visualization made it easy or hard to understand the data?\n",
+        "Why do you think this visualization was used instead of other visualizations we discussed in the course?\n",
+        "Could this visualization be used for other kinds of data?\n",
+        "Want to see how selfies are taken across the world? Check out this website to see different categories of selfies in 5 different cities.\n",
+        "\n",
+        "Want to see how economic inequality has changed over time? Look at this article to see how a series of data visualizations are used to tell a story about the global economy.\n",
+        "\n",
+        "Check out this visualization of shot attempts of the Washington Wizards, an NBA team.\n",
+        "\n",
+        "Want to see how music popularity has changed over time? Check out this cool visualization. You can click different genres for a further breakdown.\n",
+        "\n",
+        "Want to know what ages certain people get married? Check out this interactive visualization that allows you to understand the marriage age of different groups of people.\n",
+        "\n",
+        "Want to know how different cities rank in terms of social, environmental and financial well being? Check out the visualization here to see how different cities compare.\n",
+        "\n",
+        "How many times did the song “Total Eclipse of the Heart” get streamed during the 2017 solar eclipse? Check out the visualization here, which takes you through time:\n",
+        "\n"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "4lTxRpfYymYY",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "### Introduction to Pizza Assignment\n"
       ]
     }
   ]
