--- a/StatisticsWithPython_CourseraCourse.ipynb
+++ b/StatisticsWithPython_CourseraCourse.ipynb
@@ -110,19 +110,6 @@
     },
     {
       "metadata": {
-        "id": "bRlOmXK849v0",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
         "id": "KimyIYTh4qK6",
         "colab_type": "text"
       },
@@ -160,7 +147,7 @@
       "metadata": {
         "id": "AD7fEpFokSpe",
         "colab_type": "code",
-        "outputId": "4f253a4e-e05a-4eb3-9449-d4bce8408fd6",
+        "outputId": "ad4d4218-7120-4ec7-9a41-c89d82a293a0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 785
@@ -169,11 +156,11 @@
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
-        "file = 'https://raw.githubusercontent.com/xie186/Courseara_StatisticsWithPython/master/data/UCBGradAdmData1973.csv'\n",
+        "file = 'https://raw.githubusercontent.com/xie186/Coursera_StatisticsWithPython/master/data/UCBGradAdmData1973.csv'\n",
         "df = pd.DataFrame(pd.read_csv(file))\n",
         "df"
       ],
-      "execution_count": 0,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -407,7 +394,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 22
+          "execution_count": 9
         }
       ]
     },
@@ -427,7 +414,7 @@
       "metadata": {
         "id": "zClY4NOJq-xg",
         "colab_type": "code",
-        "outputId": "430aa6a6-70c4-4fb5-97f5-ff8f0584bc07",
+        "outputId": "a07130a9-43eb-4425-882b-9223ee8db002",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 141
@@ -435,14 +422,14 @@
       },
       "cell_type": "code",
       "source": [
-        "import numpy as sum\n",
+        "import numpy as np\n",
         "df_sum = pd.pivot_table(df, values=\"Freq\", index=[\"Gender\"], \n",
         "                          columns=[\"Admit\"], aggfunc=np.sum)\n",
         "\n",
         "df_sum[\"%\"] = 100*df_sum[\"Admitted\"] / (df_sum[\"Admitted\"] + df_sum[\"Rejected\"])\n",
         "df_sum"
       ],
-      "execution_count": 0,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -504,7 +491,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 49
+          "execution_count": 3
         }
       ]
     },
@@ -512,7 +499,7 @@
       "metadata": {
         "id": "hAV_OVyHsjAy",
         "colab_type": "code",
-        "outputId": "e1e6eb65-6f26-4cb7-8d71-14ce1b94f6d0",
+        "outputId": "362bb6aa-06fa-49c4-8dd7-e0e9d185657b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 327
@@ -522,19 +509,19 @@
       "source": [
         "df_sum[\"%\"].plot(kind=\"bar\", y=\"%\")"
       ],
-      "execution_count": 0,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7fb7bdcb05c0>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7f36f4600e48>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 55
+          "execution_count": 4
         },
         {
           "output_type": "display_data",
@@ -566,7 +553,7 @@
       "metadata": {
         "id": "0V-TSz2Lm-XC",
         "colab_type": "code",
-        "outputId": "c7e8964c-65d4-4dbc-d8f4-83a84e78797c",
+        "outputId": "5e294d52-9516-4f2f-8942-a2cbc31ef092",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 294
@@ -581,7 +568,7 @@
         "df_pivot[\"%(Male)\"] = 100*df_pivot[\"Male\"][\"Admitted\"]/(df_pivot[\"Male\"][\"Rejected\"] + df_pivot[\"Male\"][\"Admitted\"])\n",
         "df_pivot\n"
       ],
-      "execution_count": 0,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -707,7 +694,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 50
+          "execution_count": 5
         }
       ]
     },
@@ -715,10 +702,10 @@
       "metadata": {
         "id": "H9Co9UuYtn4K",
         "colab_type": "code",
-        "outputId": "ca36bd0f-61cb-49a7-d51a-600cf16b7b5a",
+        "outputId": "524571ac-db02-45e9-c850-9e3cbf497154",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 388
+          "height": 368
         }
       },
       "cell_type": "code",
@@ -730,7 +717,7 @@
         "df_perc\n",
         "df_perc.plot(kind=\"bar\")"
       ],
-      "execution_count": 0,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -746,13 +733,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7fb7bda3bc18>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7f36f0a5c278>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 77
+          "execution_count": 6
         },
         {
           "output_type": "display_data",
@@ -782,151 +769,20 @@
       "metadata": {
         "id": "mZtWGZ0NqJj6",
         "colab_type": "code",
-        "outputId": "39c5294a-c892-4cfb-9348-49d9d235311f",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 294
-        }
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
         ""
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead tr th {\n",
-              "        text-align: left;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead tr:last-of-type th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr>\n",
-              "      <th>Gender</th>\n",
-              "      <th colspan=\"2\" halign=\"left\">Female</th>\n",
-              "      <th colspan=\"2\" halign=\"left\">Male</th>\n",
-              "      <th>%(Female)</th>\n",
-              "      <th>%(Male)</th>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Admit</th>\n",
-              "      <th>Admitted</th>\n",
-              "      <th>Rejected</th>\n",
-              "      <th>Admitted</th>\n",
-              "      <th>Rejected</th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Dept</th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>A</th>\n",
-              "      <td>89</td>\n",
-              "      <td>19</td>\n",
-              "      <td>512</td>\n",
-              "      <td>313</td>\n",
-              "      <td>82.407407</td>\n",
-              "      <td>62.060606</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>B</th>\n",
-              "      <td>17</td>\n",
-              "      <td>8</td>\n",
-              "      <td>353</td>\n",
-              "      <td>207</td>\n",
-              "      <td>68.000000</td>\n",
-              "      <td>63.035714</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>C</th>\n",
-              "      <td>202</td>\n",
-              "      <td>391</td>\n",
-              "      <td>120</td>\n",
-              "      <td>205</td>\n",
-              "      <td>34.064081</td>\n",
-              "      <td>36.923077</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>D</th>\n",
-              "      <td>131</td>\n",
-              "      <td>244</td>\n",
-              "      <td>138</td>\n",
-              "      <td>279</td>\n",
-              "      <td>34.933333</td>\n",
-              "      <td>33.093525</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>E</th>\n",
-              "      <td>94</td>\n",
-              "      <td>299</td>\n",
-              "      <td>53</td>\n",
-              "      <td>138</td>\n",
-              "      <td>23.918575</td>\n",
-              "      <td>27.748691</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>F</th>\n",
-              "      <td>24</td>\n",
-              "      <td>317</td>\n",
-              "      <td>22</td>\n",
-              "      <td>351</td>\n",
-              "      <td>7.038123</td>\n",
-              "      <td>5.898123</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "Gender   Female              Male           %(Female)    %(Male)\n",
-              "Admit  Admitted Rejected Admitted Rejected                      \n",
-              "Dept                                                            \n",
-              "A            89       19      512      313  82.407407  62.060606\n",
-              "B            17        8      353      207  68.000000  63.035714\n",
-              "C           202      391      120      205  34.064081  36.923077\n",
-              "D           131      244      138      279  34.933333  33.093525\n",
-              "E            94      299       53      138  23.918575  27.748691\n",
-              "F            24      317       22      351   7.038123   5.898123"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 44
-        }
-      ]
+      "outputs": []
     },
     {
       "metadata": {
         "id": "FChtp4RYlb1g",
         "colab_type": "code",
-        "outputId": "e13a69a8-da22-466a-f160-dff5a0430050",
+        "outputId": "2f5e4f75-c06e-4df0-a928-e31a6d898680",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 197
@@ -943,7 +799,7 @@
         "print(df)\n",
         "df.agg(['sum', 'min'])\n"
       ],
-      "execution_count": 0,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -1009,41 +865,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
-        }
-      ]
-    },
-    {
-      "metadata": {
-        "id": "_l-eVwjOkunR",
-        "colab_type": "code",
-        "outputId": "484752fc-223b-4107-8fbd-a3a944b5adad",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 55
-        }
-      },
-      "cell_type": "code",
-      "source": [
-        "totals_dict = {}\n",
-        "totals_dict['Males'] = 0\n",
-        "totals_dict['Females'] = 0\n",
-        "for Gender, Freq in zip(df['Gender'], df['Freq']):\n",
-        "    if Gender =='Male':\n",
-        "        totals_dict['Males'] += Freq\n",
-        "    elif Gender == 'Female':\n",
-        "        totals_dict['Females'] += Freq\n",
-        "print(\"The total applicant numbers for each gender are {}.\".format(totals_dict))\n",
-        "\n"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "The total applicant numbers for each gender are {'Males': 2691, 'Females': 1835}.\n"
-          ],
-          "name": "stdout"
+          "execution_count": 7
         }
       ]
     },
