--- a/StatisticsWithPython_CourseraCourse.ipynb
+++ b/StatisticsWithPython_CourseraCourse.ipynb
@@ -42,7 +42,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "## Week2 - UNIVARIATE DATA"
+        "## UNIVARIATE DATA"
       ]
     },
     {
@@ -105,7 +105,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "## Week3 - MULTIVARIATE DATA"
+        "## MULTIVARIATE DATA"
       ]
     },
     {
