--- a/StatisticsWithPython_CourseraCourse.ipynb
+++ b/StatisticsWithPython_CourseraCourse.ipynb
@@ -26,41 +26,67 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "id": "KHGGJA0IPA04",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "id": "kDpybtbDO_O4",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "C9ta-qWH3vnX",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
         "# Understanding and Visualizing Data with Python"
       ]
     },
     {
+      "cell_type": "markdown",
       "metadata": {
         "id": "109CZcKJ33Q8",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
         "## UNIVARIATE DATA"
       ]
     },
     {
+      "cell_type": "markdown",
       "metadata": {
         "id": "M9YFQ3o656eb",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
         "### Quantitative data: Histograms"
       ]
     },
     {
+      "cell_type": "markdown",
       "metadata": {
         "id": "RkHkcU2p37T7",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
         "#### Quantititave data\n",
         "\n",
@@ -80,11 +106,11 @@
       ]
     },
     {
+      "cell_type": "markdown",
       "metadata": {
         "id": "1-rMGHoI6U7J",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
         "### Four main aspects of Histogram\n",
         "\n",
@@ -99,51 +125,52 @@
       ]
     },
     {
+      "cell_type": "markdown",
       "metadata": {
         "id": "6sfLwiaC4h3b",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
         "## MULTIVARIATE DATA"
       ]
     },
     {
+      "cell_type": "markdown",
       "metadata": {
         "id": "KimyIYTh4qK6",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
         "In the third week of this course on looking at data, we’ll introduce key ideas for examining research questions that require looking at more than one variable. In particular, we will consider both numerically and visually how different variables interact, how summaries can appear deceiving if you don’t properly account for interactions, and differences between quantitative and categorical variables. This week’s assignment will consist of a writing assignment along with reviewing those of your peers.\n",
         "\n"
       ]
     },
     {
+      "cell_type": "markdown",
       "metadata": {
         "id": "GueRXqiYkLyi",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
-        "### Simpons paradox\n",
+        "*italicized text ![alt text](https://)*### Simpons paradox\n",
         "\n",
         "Simpson's paradox  is a phenomenon in probability and statistics, in which a trend appears in several different groups of data but disappears or reverses when these groups are combined."
       ]
     },
     {
+      "cell_type": "markdown",
       "metadata": {
         "id": "A7oKCDdikQdk",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
-        "#### Example: UC Berkeley gender bias\n",
+        "*italicized text*#### Example: UC Berkeley gender bias\n",
         "\n",
         "One of the best-known examples of Simpson's paradox is a study of gender bias among graduate school admissions to University of California, Berkeley. The admission figures for the fall of 1973 showed that men applying were more likely than women to be admitted, and the difference was so large that it was unlikely to be due to chance.\n"
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "AD7fEpFokSpe",
         "colab_type": "code",
@@ -153,14 +180,13 @@
           "height": 785
         }
       },
-      "cell_type": "code",
       "source": [
         "import pandas as pd\n",
         "file = 'https://raw.githubusercontent.com/xie186/Coursera_StatisticsWithPython/master/data/UCBGradAdmData1973.csv'\n",
         "df = pd.DataFrame(pd.read_csv(file))\n",
         "df"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -399,11 +425,11 @@
       ]
     },
     {
+      "cell_type": "markdown",
       "metadata": {
         "id": "ixC8Ao8Hq_R6",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
         "##### Gender bias \n",
         "\n",
@@ -411,6 +437,7 @@
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "zClY4NOJq-xg",
         "colab_type": "code",
@@ -420,7 +447,6 @@
           "height": 141
         }
       },
-      "cell_type": "code",
       "source": [
         "import numpy as np\n",
         "df_sum = pd.pivot_table(df, values=\"Freq\", index=[\"Gender\"], \n",
@@ -429,7 +455,7 @@
         "df_sum[\"%\"] = 100*df_sum[\"Admitted\"] / (df_sum[\"Admitted\"] + df_sum[\"Rejected\"])\n",
         "df_sum"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -496,6 +522,7 @@
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "hAV_OVyHsjAy",
         "colab_type": "code",
@@ -505,11 +532,10 @@
           "height": 327
         }
       },
-      "cell_type": "code",
       "source": [
         "df_sum[\"%\"].plot(kind=\"bar\", y=\"%\")"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -538,11 +564,11 @@
       ]
     },
     {
+      "cell_type": "markdown",
       "metadata": {
         "id": "WVnoG4KvsCNr",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
         "##### Department level summary\n",
         "\n",
@@ -550,6 +576,7 @@
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "0V-TSz2Lm-XC",
         "colab_type": "code",
@@ -559,7 +586,6 @@
           "height": 294
         }
       },
-      "cell_type": "code",
       "source": [
         "df_pivot = df.pivot_table(values=\"Freq\", index=[\"Dept\"], \n",
         "                          columns=[\"Gender\", \"Admit\"])\n",
@@ -568,7 +594,7 @@
         "df_pivot[\"%(Male)\"] = 100*df_pivot[\"Male\"][\"Admitted\"]/(df_pivot[\"Male\"][\"Rejected\"] + df_pivot[\"Male\"][\"Admitted\"])\n",
         "df_pivot\n"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -699,6 +725,7 @@
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "H9Co9UuYtn4K",
         "colab_type": "code",
@@ -708,7 +735,6 @@
           "height": 368
         }
       },
-      "cell_type": "code",
       "source": [
         "df_perc = df_pivot[[\"%(Female)\",\t\"%(Male)\"]]\n",
         "print(df_perc.columns)\n",
@@ -717,7 +743,7 @@
         "df_perc\n",
         "df_perc.plot(kind=\"bar\")"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -756,22 +782,22 @@
       ]
     },
     {
+      "cell_type": "markdown",
       "metadata": {
         "id": "que18vmPsRNP",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
         "The research paper by Bickel et al. concluded that __women tended to apply to competitive departments with low rates of admission even among qualified applicants__ (such as in the English Department), whereas __men__ tended to apply to __less-competitive departments__ with high rates of admission among the qualified applicants (such as in engineering and chemistry)."
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "mZtWGZ0NqJj6",
         "colab_type": "code",
         "colab": {}
       },
-      "cell_type": "code",
       "source": [
         ""
       ],
@@ -779,6 +805,7 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "FChtp4RYlb1g",
         "colab_type": "code",
@@ -788,7 +815,6 @@
           "height": 197
         }
       },
-      "cell_type": "code",
       "source": [
         "import numpy as np\n",
         "df = pd.DataFrame([[1, 2, 3],\n",
@@ -799,7 +825,7 @@
         "print(df)\n",
         "df.agg(['sum', 'min'])\n"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -870,11 +896,11 @@
       ]
     },
     {
+      "cell_type": "markdown",
       "metadata": {
         "id": "PDNqK13pyIBH",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
         "### Modern ways to visulize data\n",
         "\n",
@@ -897,6 +923,250 @@
         "\n",
         "How many times did the song “Total Eclipse of the Heart” get streamed during the 2017 solar eclipse? Check out the visualization here, which takes you through time:\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "49xr4Ca6Hoa5",
+        "colab_type": "text"
+      },
+      "source": [
+        "## POPULATIONS AND SAMPLES"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uE0k7bMuHstZ",
+        "colab_type": "text"
+      },
+      "source": [
+        "In this part, you’ll spend more time thinking about where data come from. The highest-quality statistical analyses of data will always incorporate information about the process used to generate the data, or features of the data collection design. You’ll be exposed to important concepts related to sampling from larger populations, including probability and non-probability sampling, and how we can make inferences about larger populations based on well-designed samples. You’ll also learn about the concept of a sampling distribution, and how estimation of the variance of that distribution plays a critical role in making statements about populations. Finally, you’ll learn about the importance of reading the documentation for a given data set; a key step in looking at data is also looking at the available documentation for that data set, which describes how the data were generated.\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "33R0F37hH4O-",
+        "colab_type": "text"
+      },
+      "source": [
+        "* Learning Objectives\n",
+        "\n",
+        "> Distinguish between probablity and non-probability sampling\n",
+        "\n",
+        "> Describe the concept of a sampling distribution, and how one can make inference about a population parameter based on the estimated features of that distribution\n",
+        "\n",
+        "> Identify appropriate analytic techniques for probability and non-probability samples\n",
+        "\n",
+        "> Explain how poorly-designed samples can lead to descriptions of population features that are biased in nature"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6FsK0WScIVVS",
+        "colab_type": "text"
+      },
+      "source": [
+        "Additional Deep-Dive Readings and Web Sites on Random Sampling and Sampling Distributions\n",
+        "\n",
+        "Kish, Leslie. (1965). Survey Sampling. Wiley.\n",
+        "\n",
+        "Lohr, Sharon. (1999). Sampling: Design and Analysis, Second Edition. Cengage Learning.\n",
+        "\n",
+        "Statistics How-To - Sampling Distribution: Definition, Types, Examples\n",
+        "\n",
+        "What is a Sampling Distribution?\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nCh-W7nyInBM",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Sampleing from well-defined populations"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yRFOQehHI0sP",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XPli37bNI1U0",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Target population\n",
+        "\n",
+        "The target population should be well defined. \n",
+        "\n",
+        "How can we make inferential statements about it. \n",
+        "\n",
+        "1. Option 1: Conducting a popuylaton census\n",
+        "\n",
+        "Easier for small population\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "2. Probalility sampling\n",
+        "\n",
+        "\n",
+        " -  Construct list of all units in population\n",
+        "\n",
+        " - Determine probabilit of eletion\n",
+        "\n",
+        " - Select unites from list at random\n",
+        "\n",
+        " - Attempt to measure randomly selected unit\n",
+        "\n",
+        "\n",
+        "\n",
+        "3. Option 3:  Non-probality samples\n",
+        "\n",
+        "\n",
+        "Examples:\n",
+        "\n",
+        "- opt-in web surveys\n",
+        "\n",
+        "- quota samples\n",
+        "\n",
+        "- snowbal samping\n",
+        "\n",
+        "- convenience sampling\n",
+        "\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jUzMKWuXKbvy",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GVU97K2uHp7b",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GZUs4hgcKbMX",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Probability Sampling\n",
+        "\n",
+        "\n",
+        "#### Simple Radom Sampling\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nLxIAVvgf7Wd",
+        "colab_type": "text"
+      },
+      "source": [
+        " # Fitting Statistical Models to Data with Python\n",
+        " \n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VnrPWcX9gce1",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Overview\n",
+        "\n",
+        "You'll be introduced to new statistical concepts. You'll get a chance to learn about that week's concepts through the Python programming language, including tutorials and opportunities for practice through the Jupyter Notebook environment.\n",
+        "\n",
+        "\n",
+        "* Prerequisites\n",
+        "\n",
+        "This specialization requires a strong background in high school-level algebra, as well as completion of the first two courses in this series, or similar experience in those courses' statistical concepts and Python-level application.\n",
+        "\n",
+        "\n",
+        "* Tips for Success\n",
+        "\n",
+        " - Brush up on your Python skills\n",
+        "\n",
+        " - To follow along with the lectures, download slides from the Course Resources section. These are also great resources on which to take notes, if needed. This course's content contains more advanced topics than the first two courses; make sure to fully complete each element before moving on to the next item in the week's structure.\n",
+        "\n",
+        " - Display Jupyter Notebooks alongside Python tutorials on your screen to follow along/practice\n",
+        "\n",
+        " - Utilize the course discussion forums"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TS-meP1ghRUu",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Dataset \n",
+        "\n",
+        "* __National Health and Nutrition Examination Survey (NHANES)__\n",
+        "\n",
+        "The National Health and Nutrition Examination Survey (NHANES) is a program of studies designed to assess the health and nutritional status of adults and children in the United States. The survey is unique in that it combines interviews and physical examinations.\n",
+        "\n",
+        "For two-year cycles (e.g., 2015-2016), cross-sectional national samples of individuals living in the United States are invited to participate in both aspects of the data collection. The data produced are widely considered by the research community as among the most important scientific indicators of the health and well-being of the U.S. population.\n",
+        "\n",
+        "For this specialization, we will be analyzing data collected from a national sample of individuals during the 2015-2016 cycle.\n",
+        "\n",
+        "* __The Cartwheel Dataset__\n",
+        "\n",
+        "A simpler and smaller set of data, the Cartwheel Dataset was collected by our very own course team at the University of Michigan. It includes the following information: age, gender, glasses-wearing or not, height, weight, wingspan (arm length), completion, cartwheel distance, and overall cartwheel score.\n",
+        "\n",
+        "* __Boston Housing Dataset__\n",
+        "\n",
+        "\n",
+        "The Boston Housing dataset, shown within several of the Python tutorials, is a pre-loaded dataset from within the Scikit-learn package, and includes quite a few variables based on housing in Boston: per capita crime rate by town, average number of rooms, property tax rate, pupil-teacher ratio, etc.\n",
+        "\n",
+        "* __Autism Dataset__\n",
+        "\n",
+        "A longitudinal study conducted on children with autism forms the basis for Week 3's first case study notebook.\n",
+        "\n",
+        "Anderson, D., Oti, R., Lord, C., and Welch, K. (2009). Patterns of growth in adaptive social abilities among children with autism spectrum disorders. Journal of Abnormal Child Psychology, 37(7), 1019-1034.\n",
+        "\n",
+        "* __Mother Education & Children Test Score Dataset__\n",
+        "\n",
+        "This dataset on a mother's education compared to children's test scores is provided as a part of rstanarm, a package in R, and can be found in Data Analysis Using Regression and Multilevel/Hierarchical Models by Andrew Gelman and Jennifer Hill (2007).\n",
+        "\n",
+        "* __European Social Survey Dataset__\n",
+        "\n",
+        "The European Social Survey (ESS) is a biennial cross-national survey of attitudes and behaviour established in 2001. The ESS uses cross-sectional, probability samples which are representative of all persons aged 15 and over resident within private households in each country."
       ]
     }
   ]
