--- a/StatisticsWithPython_CourseraCourse.ipynb
+++ b/StatisticsWithPython_CourseraCourse.ipynb
@@ -1168,6 +1168,47 @@
         "\n",
         "The European Social Survey (ESS) is a biennial cross-national survey of attitudes and behaviour established in 2001. The ESS uses cross-sectional, probability samples which are representative of all persons aged 15 and over resident within private households in each country."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0iFD1H9TiFet",
+        "colab_type": "text"
+      },
+      "source": [
+        "### What Do We Mean by Fitting Models to Data'?\n",
+        "\n",
+        "\n",
+        "![image](https://user-images.githubusercontent.com/20909751/57424259-22fd8400-71e5-11e9-826b-3d7541e3948c.png)\n",
+        "\n",
+        "![image](https://user-images.githubusercontent.com/20909751/57424301-390b4480-71e5-11e9-840e-ab7799584e9a.png)\n",
+        "\n",
+        "![image](https://user-images.githubusercontent.com/20909751/57424374-75d73b80-71e5-11e9-8b54-faeae38cf66c.png)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DCtm_agTjJ7I",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### Example: Test performance and age \n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xoByzkHVl41Z",
+        "colab_type": "text"
+      },
+      "source": [
+        "![image](https://user-images.githubusercontent.com/20909751/57424886-43c6d900-71e7-11e9-989a-4271a0c17227.png)\n",
+        "\n",
+        "> What if we fit a misspecified model to the data where we weren't careful with our theory and in specifying the model and we assume that there is a linear relationship of performance and age. So, you see the fit of that linear relationship in the first plot here that dashed red line. It really doesn't look like that's as good of a fit as we saw with the curvilinear relationship in the initial model that we fitted. The model fit just looks poor given the scatter plot here. We also note that the residuals are not symmetrically scattered around zero. You see that there is more or less a curvilinear relationship of the residuals with the predicted values of performance. So, it seems like we've misspecified this relationship and we're not capturing the curvilinear relationship in these data. We also have very poor predictions of test performance when standardized age is low or standardize age is high. So, we're really missing the overall relationship here, and this is an example of a misspecified model and how the appearance of those residuals as a function or predicted values of performance would indicate that we have misspecified the model.\n"
+      ]
     }
   ]
 }
